fix layout issue with breadcrumb separator

--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -199,7 +199,7 @@ i {
     border: $breadcrumb-border;
     color: $breadcrumb-color;
     line-height: $breadcrumb-height;
-    margin-right: -5px;
+    margin-right: -4px;
     font-size: .8em;
     padding: 0 $breadcrumb-height/4 0 $breadcrumb-height/2;
     position: relative;
